# rust-sandbox

./: .gitignore  Dockerfile  readme.org  sandbox-start.sh
00-scratch/: Cargo.toml
00-scratch/src/: main.rs
01-hello-world/: 001_hello_world  001_hello_world.rs
02-guessing-game/: Cargo.toml  main  main.rs
03-cli-tool/src/: lib.rs  main.rs
04-hello-webserver/src/: lib.rs  main.rs
05-hello-world-tonic/: Cargo.toml
05-hello-world-tonic/proto/: helloworld.proto
05-hello-world-tonic/src/: client.rs  server.rs
06-rusty-py/: Cargo.toml  pyproject.toml
06-rusty-py/src/: lib.rs
07-polars/: Cargo.toml
07-polars/src/: #main.rs#  lib.rs  main.rs
