[package]
name = "hello-world-tonic"
version = "0.1.0"
edition = "2021"



[[bin]] # for the gRPC server
name = "helloworld-server"
path = "src/server.rs"


[[bin]] # for the gRPC client
name = "helloworld-client"
path = "src/client.rs"



[dependencies]
tonic = "0.11.0"
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }


[build-dependencies]
tonic-build = "0.11"
